Add roles to user
