# src/Web.API/swagger.json
@@ -2,7 +2,7 @@
   "x-generator": "NSwag v14.1.0.0 (NJsonSchema v11.0.2.0 (Newtonsoft.Json v13.0.0.0))",
   "openapi": "3.0.0",
   "info": {
-    "title": "Your API",
+    "title": "My Title",
     "version": "1.0.0"
   },
   "paths": {
@@ -273,12 +273,7 @@
           "404": {
             "description": ""
           }
-        },
-        "security": [
-          {
-            "JWT": []
-          }
-        ]
+        }
       }
     },
     "/manage/info": {
@@ -308,12 +303,7 @@
           "404": {
             "description": ""
           }
-        },
-        "security": [
-          {
-            "JWT": []
-          }
-        ]
+        }
       },
       "post": {
         "operationId": "PostManageInfo",
@@ -352,12 +342,7 @@
           "404": {
             "description": ""
           }
-        },
-        "security": [
-          {
-            "JWT": []
-          }
-        ]
+        }
       }
     },
     "/Applicants": {
@@ -386,6 +371,58 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ApplicantAddResponse"
+                }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Applicants"
+        ],
+        "operationId": "Applicants_GetResponse",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/Roles": {
+      "post": {
+        "tags": [
+          "Roles"
+        ],
+        "operationId": "Roles_AddRoleToUser",
+        "requestBody": {
+          "x-name": "toRoleRquest",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AddToRoleRquest"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
                 }
               }
             }
@@ -648,20 +685,19 @@
             "type": "string"
           }
         }
-      }
-    },
-    "securitySchemes": {
-      "JWT": {
-        "type": "apiKey",
-        "description": "Type into the textbox: 'Bearer {your JWT token}'.",
-        "name": "Authorization",
-        "in": "header"
+      },
+      "AddToRoleRquest": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "email": {
+            "type": "string"
+          },
+          "role": {
+            "type": "string"
+          }
+        }
       }
     }
-  },
-  "security": [
-    {
-      "JWT": []
-    }
-  ]
+  }
 }
